--- a/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
+++ b/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
@@ -2,16 +2,12 @@
   <div class="set-12">
     <div class="set-5">
       <div class="set-12">
-        <div class="set-4 image-box gray-icon-color" style="margin-left: 40%" >
-          <img
-            src="../../../assets/images/avatar.svg"
-            alt=""
-
-          />
+        <div class="set-4 image-box gray-icon-color" style="margin-left: 40%">
+          <img src="../../../assets/images/avatar.svg" alt="" />
         </div>
         <div class="set-12 texts-box">
           <p class="name">Usuarios</p>
-          <p class="amount">{{ data.users }}</p>
+          <p class="amount">{{  130 }}</p>
         </div>
       </div>
     </div>
@@ -25,7 +21,7 @@
           style="margin-left: 15px; text-align: center"
         >
           <p class="name">Interacciones</p>
-          <p class="amount">{{ data.interactions }}</p>
+          <p class="amount">{{ 100 }}</p>
         </div>
       </div>
     </div>
