--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -44,7 +44,7 @@
             ></expanded-text>
           </div>
         </mat-card>
-        <horizontal-stats [data]="selectedCategory.stats"></horizontal-stats>
+        <horizontal-stats [data]="selectedCategory"></horizontal-stats>
       </div>
       <div class="set-9 col-rgt">
         <panel-circles
