--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -27,7 +27,7 @@
           ></expanded-text>
         </div>
       </mat-card>
-      <horizontal-stats [data]="document.stats"></horizontal-stats>
+      <horizontal-stats [data]="document"></horizontal-stats>
       <div class="set-12 mt-2">
         <app-map-box [data]="document.coverage" class="mt-2"></app-map-box>
       </div>
