--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -44,7 +44,7 @@
             ></expanded-text>
           </div>
         </mat-card>
-        <horizontal-stats [data]="selectedCategory"></horizontal-stats>
+        <horizontal-stats ></horizontal-stats>
       </div>
       <div class="set-9 col-rgt">
         <panel-circles
@@ -69,7 +69,7 @@
         </div>
         <div class="set-12 mt-2">
           <div class="set-3 col-rgt-2">
-            <vertical-stats [data]="selectedCategory.stats"></vertical-stats>
+            <vertical-stats ></vertical-stats>
           </div>
           <div class="set-5 col-rgt-2">
             <spider-chart></spider-chart>
