--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -13,7 +13,7 @@
             <p>{{ item.title }}</p>
           </td>
           <td style="width: 300px">
-            <p class="txt-center">{{ item.stats.interactions }}</p>
+            <p class="txt-center">{{ 12 }}</p>
           </td>
         </tr>
       </tbody>
