ajustes de front

--- a/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
+++ b/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
@@ -1,4 +1,4 @@
-<mat-list class="card-container shadow">
+<!-- <mat-list class="card-container shadow">
   <mat-list-item>
     <div class="set-12">
       <div class="set-3 images-box green-icon-color">
@@ -21,4 +21,39 @@
       </div>
     </div>
   </mat-list-item>
-</mat-list>
+</mat-list> -->
+
+<mat-card class="set-12">
+  <div class="set-12 flex item">
+    <div class="set-3">
+      <div class="images-box green-icon-color">
+        <mat-icon>auto_graph</mat-icon>
+      </div>
+    </div>
+    <div class="set-9 texts-box">
+      <p class="name">
+        <small>Soluciones</small>
+      </p>
+      <p class="amount">
+        <small>{{ 320 }}</small>
+      </p>
+    </div>
+  </div>
+
+  <div class="set-12 flex item">
+    <div class="set-3">
+      <div class="images-box red-icon-color">
+        <mat-icon>warning</mat-icon>
+      </div>
+    </div>
+
+    <div class="set-9 texts-box">
+      <p class="name">
+        <small>Problemáticas</small>
+      </p>
+      <p class="amount">
+        <small>{{ 233 }}</small>
+      </p>
+    </div>
+  </div>
+</mat-card>
