--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -1,14 +1,13 @@
 <div class="set-12 loading" *ngIf="!isDataAvailable">
   <mat-spinner></mat-spinner>
 </div>
-<div class="set-12">
-  <div class="container" *ngIf="isDataAvailable">
+
+<div class="set-12" *ngIf="isDataAvailable">
+  <div class="container">
     <breadcrumbs-component>
       <li>Documentos</li>
-      <li
-        *ngIf="!!document.title; else noTitle"
-        (click)="utilityService.linkMe('/documentos-publicos/' + document._id)"
-      >
+      <li *ngIf="!!document.title; else noTitle"
+        (click)="utilityService.linkMe('/documentos-publicos/' + document._id)">
         {{ document.title }}
       </li>
       <ng-template #noTitle>
@@ -19,10 +18,8 @@
     <div class="set-12 txt-left" style="margin-bottom: 10px">
       <span class="created-by">
         Autor:
-        <span class="author"
-          >{{ selectedCategory.createdBy.firstname }}
-          {{ selectedCategory.createdBy.lastname }}</span
-        >
+        <span class="author">{{ selectedCategory.createdBy.firstname }}
+          {{ selectedCategory.createdBy.lastname }}</span>
       </span>
     </div>
 
@@ -38,25 +35,22 @@
             <p class="set-12 card-title">
               {{ selectedCategory.category.name }}
             </p>
-            <expanded-text
-              [text]="selectedCategory.description"
-              [minLength]="200"
-            ></expanded-text>
+            <expanded-text [text]="selectedCategory.description" [minLength]="200"></expanded-text>
           </div>
         </mat-card>
-        <horizontal-stats ></horizontal-stats>
+        <horizontal-stats></horizontal-stats>
+        <div class="set-12">
+          <vertical-stats></vertical-stats>
+        </div>
       </div>
       <div class="set-9 col-rgt">
-        <panel-circles
-          [data]="selectedCategory.subLayouts"
-          [withBorder]="true"
-          [redirectTo]="'SUBCATEGORY'"
-        ></panel-circles>
+        <panel-circles [data]="selectedCategory.subLayouts" [withBorder]="true" [redirectTo]="'SUBCATEGORY'">
+        </panel-circles>
 
         <div class="mt-2 set-3">
           <mat-form-field appearance="outline">
             <mat-label>Cobertura</mat-label>
-            <mat-select formControlName="coverage" multiple>
+            <mat-select>
               <mat-option value="all">
                 <small>Nacional</small>
               </mat-option>
@@ -67,14 +61,11 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="set-12 mt-2">
-          <div class="set-3 col-rgt-2">
-            <vertical-stats ></vertical-stats>
-          </div>
-          <div class="set-5 col-rgt-2">
+        <div class="set-12">
+          <div class="set-6 col-rgt-2">
             <spider-chart></spider-chart>
           </div>
-          <div class="set-4">
+          <div class="set-6">
             <top10-list [data]="items"></top10-list>
           </div>
         </div>
