--- a/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
+++ b/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
@@ -1,27 +1,35 @@
 <mat-card class="card-container">
   <div class="set-12">
-    <div class="set-5">
+    <div class="set-6">
       <div class="set-12">
-        <div class="set-4 image-box gray-icon-color" style="margin-left: 40%">
-          <img src="../../../assets/images/avatar.svg" alt="" />
+        <div class="image-box gray-icon-color">
+          <mat-icon>group</mat-icon>
         </div>
         <div class="set-12 texts-box">
-          <p class="name">Usuarios</p>
-          <p class="amount">{{  130 }}</p>
+          <p class="name">
+            <small>Usuarios</small>
+          </p>
+          <p class="amount">
+            <small>{{ 130 }}</small>
+          </p>
         </div>
       </div>
     </div>
+
     <div class="set-6">
       <div class="set-12">
-        <div class="set-12 image-box red-icon-color">
-          <img src="../../../assets/images/hand.svg" alt="" width="42" />
+        <div class="set-12">
+          <div class="image-box red-icon-color">
+            <mat-icon>front_hand</mat-icon>
+          </div>
         </div>
-        <div
-          class="set-12 texts-box"
-          style="margin-left: 15px; text-align: center"
-        >
-          <p class="name">Interacciones</p>
-          <p class="amount">{{ 100 }}</p>
+        <div class="set-12 texts-box">
+          <p class="name">
+            <small>Interacciones</small>
+          </p>
+          <p class="amount">
+            <small>{{ 100 }}</small>
+          </p>
         </div>
       </div>
     </div>
