--- a/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.scss
+++ b/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.scss
@@ -1,44 +1,56 @@
-.card-container {
+:host {
   width: 100%;
-  padding: 50px 10px;
-  margin: 0px auto;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .image-box {
-    width: 45px;
-    height: 45px;
-    padding: 10px;
-    border-radius: 100%;
-    margin-left: 40%;
-    img {
-      width: 22.5px;
-      height: 22.5px;
+  float: left;
+  margin-top: 20px;
+
+  .card-container {
+    width: 100%;
+    // padding: 50px 10px;
+    margin: 0px auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .image-box {
+      width: 45px;
+      height: 45px;
+      padding: 10px;
+      border-radius: 100%;
+    }
+
+    .texts-box {
+      text-align: start;
+      margin-left: 10px;
+      margin: 10px 0px;
+      text-align: center;
+
+      .name {
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: 0.5px;
+      }
+
+      .amount {
+        font-size: 24px;
+        font-weight: 500;
+      }
     }
   }
 
-  .texts-box {
-    text-align: start;
-    margin-left: 10px;
-    margin: 10px 0px;
-    text-align: center;
-    .name {
-      font-size: 14px;
-      font-weight: 400;
-      letter-spacing: 0.5px;
-    }
-    .amount {
-      font-size: 24px;
-      font-weight: 500;
+  .gray-icon-color {
+    background-color: #E1F2EC;
+
+    mat-icon {
+      color: #20C588;
     }
   }
-}
 
-.gray-icon-color {
-  background-color: #E1F2EC;
-}
+  .red-icon-color {
+    background-color: #FCDBC3;
 
-.red-icon-color {
-  background-color: #FCDBC3;
+    mat-icon {
+      color: #FF6D00;
+    }
+  }
 }
