--- a/src/app/public-documents/subcategory/subcategory.component.scss
+++ b/src/app/public-documents/subcategory/subcategory.component.scss
@@ -1,107 +1,123 @@
-.container {
-  margin: 120px 40px;
-  margin-bottom: 100px;
+:host {
+  .container {
+    margin: 120px 40px;
+    margin-bottom: 100px;
 
-  .container-titles {
-    background-color: white;
-    .title {
-      // display: flex;
+    .container-titles {
+      background-color: white;
 
-      // align-items: flex-start;
+      .title {
+        // display: flex;
+
+        // align-items: flex-start;
+        p {
+          margin-left: 18%;
+          font-size: 14px;
+          font-weight: 500;
+          margin-top: 10px;
+        }
+
+        img {
+          position: absolute;
+          margin-left: 5px;
+        }
+      }
+    }
+
+    .tables {
+      .title {
+        font-weight: 500;
+        text-align: start;
+      }
+    }
+
+    .users-container {
       p {
-        margin-left: 18%;
         font-size: 14px;
         font-weight: 500;
-        margin-top: 10px;
       }
+    }
+
+    .featured-users {
+      height: min-content;
+    }
+
+    .doc-description {
+      padding: 0 !important;
+    }
+
+    .imghldr {
+      min-height: 250px;
+      max-height: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba($color: #CEDDFF, $alpha: 0.4);
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
+      overflow: hidden;
+
+      mat-icon {
+        font-size: 70pt;
+        color: rgba($color: #000000, $alpha: 0.1);
+      }
+
       img {
-        position: absolute;
-        margin-left: 5px;
+        width: 100%;
+        height: auto;
+        position: relative;
+        object-fit: contain;
       }
     }
-  }
 
-  .tables {
-    .title {
-      font-weight: 500;
-      text-align: start;
+    .infohldr {
+      padding: 5px 20px;
     }
-  }
 
-  .users-container {
-    p {
+    .card-title {
+      font-weight: 600;
+      font-size: 20px;
+      text-transform: uppercase;
+      color: #000000;
+      margin-bottom: 10px;
+      letter-spacing: 0.5px;
+      margin-top: 15px;
+    }
+
+    .card-description {
+      font-weight: 400;
       font-size: 14px;
-      font-weight: 500;
+      text-align: justify;
+      color: #636363;
+      margin-bottom: 8px;
+
+      &.link {
+        display: inline-block;
+        text-decoration: underline;
+        font-size: 12px;
+        cursor: pointer;
+      }
     }
-  }
-  .featured-users {
-    height: min-content;
-  }
-  .doc-description {
-    padding: 0 !important;
-  }
 
-  .imghldr {
-    // min-height: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba($color: #ceddff, $alpha: 0.4);
-    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
-
-    mat-icon {
-      font-size: 70pt;
-      color: rgba($color: #000000, $alpha: 0.1);
+    table {
+      width: 100%;
+      box-shadow: none !important;
+      padding: 0px 10px;
+      padding-bottom: 50px;
     }
   }
 
-  .infohldr {
-    padding: 5px 20px;
-  }
-
-  .card-title {
-    font-weight: 600;
-    font-size: 20px;
-    text-transform: uppercase;
-    color: #000000;
-    margin-bottom: 10px;
-    letter-spacing: 0.5px;
-    margin-top: 15px;
-  }
-
-  .card-description {
-    font-weight: 400;
-    font-size: 14px;
-    text-align: justify;
-    color: #636363;
-    margin-bottom: 8px;
-
-    &.link {
-      display: inline-block;
-      text-decoration: underline;
-      font-size: 12px;
-      cursor: pointer;
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
-  table {
+  .imageSubcategory {
     width: 100%;
-    box-shadow: none !important;
-    padding: 0px 10px;
-    padding-bottom: 50px;
+    height: 208px;
   }
-}
 
-.loading {
-  mat-spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-}
-
-.imageSubcategory{
-  width: 100%;
-  height: 208px;
 }
