--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 :host {
   width: 100%;
   height: 100%;
-  padding-top: 80px;
+  // padding-top: 80px;
 
   .ds-page {
     width: 100%;
@@ -9,12 +9,12 @@
     position: relative;
   }
 
-  .ds-page:not(:first-child) {
-    border-top: 11px solid #ffffff;
-  }
+  // .ds-page:not(:first-child) {
+  //   border-top: 11px solid #ffffff;
+  // }
 
   .ds-page:nth-child(1) {
-    background: url('../../assets/images/1200x-1.jpeg') no-repeat;
+    background: url('../../assets/images/mexiclectivo-top-bg.jpg') no-repeat;
     background-size: cover;
     background-position: center;
     z-index: 9;
@@ -74,9 +74,53 @@
   }
 
   .ds-page:nth-child(2) {
-    background: url('../../assets/images/andrea-leopardi-N17c03GJGKc-unsplash.png') no-repeat;
-    background-size: 70% auto;
+    // background: url('../../assets/images/andrea-leopardi-N17c03GJGKc-unsplash.png') no-repeat;
+    // background-size: 70% auto;
+    height: auto !important;
+    background: #ffffff;
     z-index: 11;
+    padding-bottom: 40px;
+
+    .set-6 {
+      text-align: center;
+    }
+
+    .section-txt {
+      p {
+        text-align: justify !important;
+        margin-bottom: 20px;
+      }
+
+      p:first-child {
+        margin-top: 40px;
+      }
+
+      p:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    .globe {
+      position: relative;
+
+      p {
+        position: absolute;
+        z-index: 4;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 35pt;
+        font-weight: bold;
+      }
+
+      img {
+        width: 60%;
+        height: auto;
+        margin-top: -20px;
+        position: relative;
+        z-index: 3;
+      }
+    }
 
     .info {
       width: 45%;
@@ -126,10 +170,50 @@
   }
 
   .ds-page:nth-child(3) {
-    background: url('../../assets/images/jezael-melgoza-KbR06h9dNQw-unsplash.png') no-repeat;
-    background-size: 70% auto;
-    background-position: right;
+    // background: url('../../assets/images/jezael-melgoza-KbR06h9dNQw-unsplash.png') no-repeat;
+    // background-size: 70% auto;
+    // background-position: right;
+    background: #71f5ad;
+    height: auto !important;
+    padding: 70px 120px;
     z-index: 13;
+    display: flex;
+    align-items: flex-end;
+
+    mat-icon {
+      font-size: 190pt;
+      color: #ffffff;
+    }
+
+    .contents {
+      max-width: 50%;
+    }
+
+    p:first-child {
+      font-size: 50px;
+      color: #000000;
+      font-weight: bold;
+    }
+
+    p:nth-child(2) {
+      font-size: 70pt;
+      color: #ffffff;
+      font-weight: bold;
+    }
+
+    p:nth-child(3),
+    p:nth-child(4) {
+      font-size: 17pt;
+    }
+
+    button {
+      background: #00031d;
+      color: #ffffff;
+      font-weight: bold;
+      border-radius: 10px;
+      padding: 30px 60px;
+      font-size: 30pt;
+    }
 
     .info {
       width: 45%;
@@ -179,9 +263,17 @@
   }
 
   .ds-page:nth-child(4) {
-    background: url('../../assets/images/Rectangle-511.png') no-repeat;
-    background-size: cover;
+    // background: url('../../assets/images/Rectangle-511.png') no-repeat;
+    // background-size: cover;
+    height: auto !important;
+    background: #00031d;
+    padding: 70px 120px;
     z-index: 14;
+    text-align: center;
+
+    img {
+      width: 20% !important;
+    }
 
     .info {
       width: 45%;
