--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -32,7 +32,7 @@
       class="btn-permissios"
       (click)="redirectEdition()"
     >
-      ir a edición
+      Ir a edición
     </button>
     <button
       *ngIf="permission == true && isPublic == -1"
@@ -40,7 +40,7 @@
       class="btn-permissios"
       (click)="redirectEdition()"
     >
-      Ver Publico
+      Ver público
     </button>
 
     <!-- <button type="button">
