--- a/src/app/public-documents/components/testimony-card/testimony-card.component.html
+++ b/src/app/public-documents/components/testimony-card/testimony-card.component.html
@@ -1,9 +1,9 @@
 <div *ngFor="let item of data">
   <div class="card-item set-12">
     <div
-      class="set-2"
+      class="set-3"
       style="
-        background-color: gray;
+        background-color: red;
         height: 82px;
         border-radius: 6px 0px 0px 6px;
       "
@@ -16,7 +16,7 @@
         height="82px"
       />
     </div>
-    <div class="set-10" style="padding: 16px 10px">
+    <div class="set-9" style="padding: 16px 10px">
       <p class="title">{{ item.title }}</p>
       <span>
         <p class="date">
