--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -4,7 +4,7 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="container">
     <div class="set-12">
-      <div class="set-6">
+      <div class="set-7">
         <breadcrumbs-component>
           <li>Documentos</li>
           <li
@@ -46,45 +46,19 @@
       <div class="set-3 featured-users">
         <featured-users [inputAmount]="3"></featured-users>
       </div>
-      <div class="set-3">
-        <div class="header-buttons">
-          <div *ngIf="permission == true" class="button-box">
-            <button
-              type="button"
-              mat-mini-fab
-              color="warn"
-              class="add-button green"
-              (click)="openModalSolution()"
-            >
-              <mat-icon>create_new_folder</mat-icon>
-            </button>
-            <p>Agregar solución</p>
-          </div>
-          <div class="button-box">
-            <button
-              type="button"
-              mat-mini-fab
-              color="warn"
-              class="add-button red"
-              (click)="openModalComment()"
-            >
-              <mat-icon>create_new_folder</mat-icon>
-            </button>
-            <p>Agregar Comentario</p>
-          </div>
-          <div class="button-box">
-            <button
-              type="button"
-              mat-mini-fab
-              color="warn"
-              class="add-button purple"
-              (click)="openModalTestimony()"
-            >
-              <mat-icon>create_new_folder</mat-icon>
-            </button>
-            <p>Agregar Testimonios</p>
-          </div>
-        </div>
+      <div class="set-2 txt-right">
+        <button *ngIf="permission" type="button" mat-mini-fab color="accent" class="mini" matTooltip="Agregar Solución"
+          (click)="openModalSolution()">
+          <mat-icon>feedback</mat-icon>
+        </button>
+        <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
+          (click)="openModalComment()">
+          <mat-icon>add_comment</mat-icon>
+        </button>
+        <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Testimonio"
+          (click)="openModalTestimony()">
+          <mat-icon>book</mat-icon>
+        </button>
       </div>
       <div class="set-12 txt-left" style="margin-top: 10px">
         <span class="created-by">
