--- a/src/app/public-documents/components/circle-custom/circle-custom.component.scss
+++ b/src/app/public-documents/components/circle-custom/circle-custom.component.scss
@@ -1,17 +1,26 @@
 .container {
   background-color: transparent;
-  width: 200px;
-  height: 200px;
+  // width: 220px;
+  // height: 140px;
+  // top: 10px;
+  // left: 20px;
+  position: relative;
   cursor: pointer;
 }
 .container .out-circumference .overlay .in-circumference {
-
   width: 100%;
-  height: 100%;
-  position: relative;
-  background-size: cover;
-  box-shadow: 0px 0px 12px #707070;
-  border-radius: 100%;
+  height: 70%;
+  position: absolute;
+  // background-size: cover;
+  // background-position-y: center;
+
+  background-size: 100% 100%;
+  border-radius: 14px;
+  border: 4px solid rgba(97, 97, 97, 0.399);
+  // box-shadow: 0px 0px 12px #707070;
+  // border-radius: 100%;
+  background-color: black;
+  filter: grayscale(60%);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -42,9 +51,9 @@
   width: 100%;
   height: 100%;
   border-color: #ff6d00;
-  border-style: solid;
-  border-width: 5px;
-  border-radius: 100%;
+  // border-style: solid;
+  // border-width: 5px;
+  // border-radius: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -52,14 +61,12 @@
 }
 
 .title {
-  font-family: "Noto Sans", sans-serif;
-  // font-size: larger;
   text-align: center;
   font-weight: 600;
   color: #ffffff;
 }
 .value {
-  margin-top: 10px;
+  margin-top: 8px;
   text-align: center;
   font-weight: 600;
   color: #ffffff;
