--- a/src/app/public-documents/components/panel-circles/panel-circles.component.html
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.html
@@ -1,13 +1,41 @@
 <div class="main-box">
-  <div class="main shadow">
-    <div class="align" *ngFor="let item of categories">
-      <circle-custom
-        [data]="item"
-        [size]="item.size"
-        [position]="item.position"
-        [categoryLength]="categoryLength"
+  <div
+    *ngIf="categoryLength > 10"
+    style="
+      position: absolute;
+      background-color: #306eff;
+      color: white;
+      border-radius: 8px;
+      right: 60px;
+      margin-top: 10px;
+    "
+  >
+    <button mat-button [matMenuTriggerFor]="menu">Más categorías</button>
+    <mat-menu #menu="matMenu" xPosition="before">
+      <button
+        mat-menu-item
+        *ngFor="let item of categories"
         (click)="redirect(item.id)"
-      ></circle-custom>
+      >
+        {{ item.title }}
+      </button>
+    </mat-menu>
+  </div>
+  <div class="main shadow">
+    <div
+      [ngClass]="'set-' + item.set"
+      [style.margin]="item.margin"
+      *ngFor="let item of slices"
+    >
+      <div class="align" *ngFor="let item of item.data">
+        <circle-custom
+          [data]="item"
+          [size]="item.size"
+          [position]="item.position"
+          [categoryLength]="categoryLength"
+          (click)="redirect(item.id)"
+        ></circle-custom>
+      </div>
     </div>
   </div>
 </div>
