--- a/src/app/public-documents/components/panel-circles/panel-circles.component.scss
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.scss
@@ -1,11 +1,9 @@
 .main-box {
-  height: 400px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  
+  height: 450px;
+  overflow: hidden;
+
   .main {
-    height: 400px;
-    min-width: 2200px;
+    height: 450px;
     // width: 100%;
     display: flex;
     background-image: radial-gradient(#212121 5%, transparent 5%);
@@ -15,18 +13,15 @@
     background-color: white;
     align-items: center;
 
-    .align{
+    .align {
       height: 100%;
-      margin: 50px;
+      // margin: 50px;
     }
-    circle-custom{
-        display: block;
-        margin: 0px;
-      }
-
-      
+    circle-custom {
+      display: block;
+      margin: 0px;
     }
-
+  }
 }
 
 *::-webkit-scrollbar {
