--- a/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.scss
+++ b/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.scss
@@ -5,14 +5,19 @@
   background-position: 0 0, 20px 20px;
   background-size: 30px 30px;
   border-radius: 5px 5px 0px 0px;
-  padding: 40px;
+  padding: 25px;
   .random-text {
+    margin-bottom: 28px;
     position: relative;
     span {
+      background-color: white;
+      padding: 6px 20px;
+      border-radius: 10px;
+      border : 4px solid #ff6d00;
       text-transform: uppercase;
       font-weight: 600;
       color: #ff6d00;
-      margin-top: 70px;
+      // margin-top: 20px;
       z-index: 1001;
     }
   }
