--- a/src/app/public-documents/components/testimonials/testimonials.component.scss
+++ b/src/app/public-documents/components/testimonials/testimonials.component.scss
@@ -50,7 +50,7 @@
       margin-bottom: 9pt;
 
       .leading {
-        width: 15%;
+        width: 20%;
 
         img {
           width: 100%;
@@ -60,19 +60,19 @@
       }
 
       .info {
-        width: 85%;
+        width: 80%;
         padding: 10pt;
         display: flex;
         align-items: flex-start;
         justify-content: center;
         flex-direction: column;
+        margin-left: 20px;
         
         .about {
           display: flex;
           align-items: center;
           margin: 0;
           margin-top: 10pt;
-
           .avatar {
             margin: 0;
             width: 18pt;
