--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -35,8 +35,12 @@
       <div class="set-3 col-lft">
         <mat-card class="set-12 doc-description">
           <div class="set-12 imghldr">
-            <mat-icon *ngIf="!image">panorama</mat-icon>
-            <img *ngIf="image" [src]="image" alt="" />
+            <mat-icon *ngIf="subcategory.images.length == 0">panorama</mat-icon>
+            <slider-images [images]="subcategory.images" *ngIf="subcategory.images.length != 0"></slider-images>
+            <div class="overlay" (click)="popImageViewer()">
+              <mat-icon>photo_camera</mat-icon>
+              <div class="cover"></div>
+            </div>
           </div>
           <div class="set-12 infohldr">
             <p class="set-12 card-title">{{ subcategory.category.name }}</p>
@@ -62,13 +66,17 @@
         </div>
         <div class="set-12 tables" style="background-color: white">
           <div class="set-6">
-            <table mat-table [dataSource]="solutionsDataSource" class="mat-elevation-z8">
+            <div class="set-6" style="margin-top:15px;margin-left: 10px;">
+              <div class="set-12 table-head">
+                <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Búscar en soluciones..."
+                  [disabled]="solutionsDataSource.length == 0">
+              </div>
+            </div>
+            <table mat-table [dataSource]="SolutionDataSource" class="mat-elevation-z8">
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
-                  <p class="title">
-                    {{ element.title }}
-                  </p>
+                  <a style="font-weight: 500; cursor: pointer" (click)="redirectSolution(element._id)">{{ element.title }}</a>
                 </td>
               </ng-container>
 
@@ -91,7 +99,13 @@
             </table>
           </div>
           <div class="set-6">
-            <table mat-table [dataSource]="topicsDataSource" class="mat-elevation-z8">
+            <div class="set-6" style="margin-top:15px">
+              <div class="set-12 table-head">
+                <input type="text" (keyup)="applyFilterTopic($event)" placeholder="Búscar en temas..."
+                  [disabled]="topicsDataSource.length == 0">
+              </div>
+            </div>
+            <table mat-table [dataSource]="TopicDataSource" class="mat-elevation-z8" >
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
