--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -51,32 +51,42 @@
       <div class="set-9 col-rgt">
         <panel-subcategory [data]="panelTopicsData" [selectedID]="subcategory._id"></panel-subcategory>
         <div class="set-12 container-titles">
-          <div class="set-6 title">
+          <div class="set-3 title">
             <p>
               Soluciones
               <img src="../../../assets/images/row.png" alt="" width="22" />
             </p>
+            
           </div>
-          <div class="set-6 title">
+          <div class="set-3 ">
+            <div class="set-4 table-head">
+              <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Buscar soluciones..."
+                [disabled]="solutionsDataSource.length == 0">
+            </div>
+          </div>
+          <div class="set-3 title">
             <p>
               Problemas
               <img src="../../../assets/images/alert.webp" alt="" width="20" />
             </p>
           </div>
+          <div class="set-3">
+            <div class="set-4 table-head">
+              <input type="text" (keyup)="applyFilterTopic($event)" placeholder="Buscar temas..."
+                [disabled]="topicsDataSource.length == 0">
+            </div>
+          </div>
         </div>
         <div class="set-12 tables" style="background-color: white">
           <div class="set-6">
-            <div class="set-6" style="margin-top:15px;margin-left: 10px;">
-              <div class="set-12 table-head">
-                <input type="text" (keyup)="applyFilterSolution($event)" placeholder="Búscar en soluciones..."
-                  [disabled]="solutionsDataSource.length == 0">
-              </div>
-            </div>
+            
             <table mat-table [dataSource]="SolutionDataSource" class="mat-elevation-z8">
               <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef></th>
+                <th mat-header-cell *matHeaderCellDef>Título</th>
                 <td mat-cell *matCellDef="let element">
-                  <a style="font-weight: 500; cursor: pointer" (click)="redirectSolution(element._id)">{{ element.title }}</a>
+                  <button type="button" class="catbtn" (click)="redirectSolution(element._id)">
+                    {{element.title}}
+                  </button>
                 </td>
               </ng-container>
 
@@ -99,17 +109,14 @@
             </table>
           </div>
           <div class="set-6">
-            <div class="set-6" style="margin-top:15px">
-              <div class="set-12 table-head">
-                <input type="text" (keyup)="applyFilterTopic($event)" placeholder="Búscar en temas..."
-                  [disabled]="topicsDataSource.length == 0">
-              </div>
-            </div>
+            
             <table mat-table [dataSource]="TopicDataSource" class="mat-elevation-z8" >
               <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef></th>
+                <th mat-header-cell *matHeaderCellDef>Título</th>
                 <td mat-cell *matCellDef="let element">
-                  <a style="font-weight: 500; cursor: pointer" (click)="redirect(element._id)">{{ element.title }}</a>
+                  <button type="button" class="catbtn" (click)="redirect(element._id)">
+                    {{element.title}}
+                  </button>
                 </td>
               </ng-container>
 
