--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -118,7 +118,7 @@
             </mat-card>
           </div>
           <div class="set-12 mt-2">
-            <solutions-card [data]="solutionsData"></solutions-card>
+            <solutions-card [data]="SolutionDataSource"></solutions-card>
           </div>
         </div>
         <div class="set-4">
