--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -6,13 +6,14 @@
   <div class="container">
     <div class="set-7">
       <breadcrumbs-component>
-        <li>Documentos</li>
+        <li>...</li>
         <li
           (click)="
             utilityService.linkMe('/documentos-publicos/' + document._id)
           "
         >
-          {{ document.title }}
+          <!-- {{ document.title }} -->
+          ...
         </li>
         <li
           (click)="
@@ -54,9 +55,9 @@
             )
           "
         >
-          {{ topic.title }}
+          {{ topic.shortTitle }}
         </li>
-        <li>{{ solution.title }}</li>
+        <li>{{ solution.shortTitle }}</li>
       </breadcrumbs-component>
     </div>
     <div class="set-3 featured-users">
