--- a/src/app/public-documents/solution/solution.component.scss
+++ b/src/app/public-documents/solution/solution.component.scss
@@ -185,15 +185,17 @@
     mat-card {
       padding: 0;
       display: flex;
+      height: 250px;
     
       .image-box {
-        width: 35%;
+        width: 40%;
         position: relative;
         margin: 0;
     
         img {
           width: 100%;
           height: 100%;
+          filter: brightness(70%);
         }
     
         .info {
@@ -226,8 +228,7 @@
             p {
               font-size: 13pt;
               color: #fff;
-              text-shadow: 0 0 4px #4b4b4b;
-              -webkit-text-stroke: 0.1px rgb(35, 35, 35);
+              text-shadow: 0 0 4px #919191;
             }
     
             button {
@@ -236,7 +237,8 @@
             }
             
             .votes{
-              font-size: 20pt;
+              margin-top: 8px;
+              font-size: 22pt;
               font-weight: bold;
             }
           }
@@ -245,7 +247,7 @@
     
       .data-box {
         width: 60%;
-        padding: 30px 0px;
+        padding: 30px 30px;
     
         .title {
           font-size: 14pt;
