--- a/src/app/public-documents/topic/topic.component.scss
+++ b/src/app/public-documents/topic/topic.component.scss
@@ -187,15 +187,19 @@
     mat-card {
       padding: 0;
       display: flex;
+      height: 250px;
     
       .image-box {
-        width: 35%;
+        width: 40%;
         position: relative;
         margin: 0;
     
         img {
           width: 100%;
           height: 100%;
+          object-fit: cover;
+          filter: brightness(70%);
+
         }
     
         .info {
@@ -226,9 +230,9 @@
           .actions {
             margin: 0;
             p {
-              font-size: 13pt;
+              font-size: 14pt;
               color: #fff;
-              text-shadow: 0 0 4px #4b4b4b;
+              text-shadow: 0 0 4px #919191;
             }
     
             button {
@@ -237,7 +241,8 @@
             }
             
             .votes{
-              font-size: 16pt;
+              margin-top: 8px;
+              font-size: 22pt;
               font-weight: bold;
             }
           }
@@ -246,7 +251,7 @@
     
       .data-box {
         width: 60%;
-        padding: 30px 0px;
+        padding: 30px 30px;
     
         .title {
           font-size: 14pt;
