--- a/src/app/public-documents/components/circle-custom/circle-custom.component.scss
+++ b/src/app/public-documents/components/circle-custom/circle-custom.component.scss
@@ -8,21 +8,35 @@
   cursor: pointer;
 }
 .container .out-circumference .overlay .in-circumference {
-  width: 100%;
-  height: 70%;
-  position: absolute;
-  // background-size: cover;
-  // background-position-y: center;
+  // width: 100%;
+  // height: 70%;
+  // position: absolute;
+  // // background-size: cover;
+  // // background-position-y: center;
 
-  background-size: 100% 100%;
-  border-radius: 14px;
-  border: 4px solid rgba(97, 97, 97, 0.399);
-  // box-shadow: 0px 0px 12px #707070;
-  // border-radius: 100%;
-  background-color: black;
-  filter: grayscale(60%);
+  // background-size: 100% 100%;
+  // border-radius: 14px;
+  // border: 4px solid rgba(97, 97, 97, 0.399);
+  // // box-shadow: 0px 0px 12px #707070;
+  // // border-radius: 100%;
+  // background-color: black;
+  // filter: grayscale(60%);
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: center;
+  // align-items: center;
+
+
+
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-size: cover;
+  box-shadow: 0px 0px 10px #707070;
+  border-radius: 100%;
   display: flex;
   flex-direction: row;
+  filter: grayscale(60%);
   justify-content: center;
   align-items: center;
 }
@@ -48,12 +62,12 @@
 }
 
 .container .out-circumference {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   border-color: #ff6d00;
-  // border-style: solid;
-  // border-width: 5px;
-  // border-radius: 100%;
+  border-style: solid;
+  border-width: 4px;
+  border-radius: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
