--- a/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.scss
+++ b/src/app/public-documents/components/panel-subcategory/panel-subcategory.component.scss
@@ -10,13 +10,13 @@
     margin-bottom: 28px;
     position: relative;
     span {
-      background-color: white;
+      background-color: #ff6d00;
       padding: 6px 20px;
-      border-radius: 10px;
-      border : 4px solid #ff6d00;
+      border-radius: 4px;
+      // border : 4px solid #ff6d00;
       text-transform: uppercase;
       font-weight: 600;
-      color: #ff6d00;
+      color: white;
       // margin-top: 20px;
       z-index: 1001;
     }
